name:                aoc2017
version:             0.1.0.0
synopsis:            Short description of your package
homepage:            https://github.com/githubuser/aoc2017#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2017 Author name here
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

-- To avoid duplicated efforts in documentation and dealing with the
-- complications of embedding Haddock markup inside cabal files, it is
-- common to point users to the README.md file.
description:         Please see the README on Github at <https://github.com/githubuser/aoc2017#readme>

library
  hs-source-dirs:      src
  exposed-modules:     Lib
  build-depends:       base >= 4.7 && < 5,
                       text
  default-language:    Haskell2010

executable aoc2017.1
  hs-source-dirs:      src
  main-is:             day1/Main.hs
  ghc-options:         -O2 -threaded -rtsopts -funbox-strict-fields
  build-depends:       base
                     , text
                     , split
                     , aoc2017
  default-language:    Haskell2010

executable aoc2017.2
  hs-source-dirs:      src
  main-is:             day2/Main.hs
  ghc-options:         -O2 -threaded -rtsopts -funbox-strict-fields
  build-depends:       base
                     , text
                     , split
                     , aoc2017
  default-language:    Haskell2010

executable aoc2017.3
  hs-source-dirs:      src
  main-is:             day3/Main.hs
  ghc-options:         -O2 -threaded -rtsopts -funbox-strict-fields
  build-depends:       base
                     , text
                     , containers
                     , aoc2017
  default-language:    Haskell2010

executable aoc2017.4
  hs-source-dirs:      src
  main-is:             day4/Main.hs
  ghc-options:         -O2 -threaded -rtsopts -funbox-strict-fields
  build-depends:       base
                     , text
                     , containers
                     , aoc2017
  default-language:    Haskell2010

executable aoc2017.5
  hs-source-dirs:      src
  main-is:             day5/Main.hs
  ghc-options:         -O2 -threaded -rtsopts -funbox-strict-fields
  build-depends:       base
                     , text
                     , vector
                     , aoc2017
                     , primitive
  default-language:    Haskell2010

executable aoc2017.6
  hs-source-dirs:      src
  main-is:             day6/Main.hs
  ghc-options:         -O2 -threaded -rtsopts -funbox-strict-fields
  build-depends:       base
                     , text
                     , vector
                     , aoc2017
                     , containers
                     , primitive
  default-language:    Haskell2010

executable aoc2017.7
  hs-source-dirs:      src src/day7
  main-is:             day7/Main.hs
  ghc-options:         -O2 -threaded -rtsopts -funbox-strict-fields
  build-depends:       base
                     , text
                     , vector
                     , aoc2017
                     , mtl
                     , containers
                     , primitive
                     , parsec
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/githubuser/aoc2017
